--- a/hackathonvolunteer-certificates-305jan2026.html
+++ b/hackathonvolunteer-certificates-305jan2026.html
@@ -8,6 +8,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
   <style>
     :root{
+      --primary:#1a73e8;
+      --primary-dark:#1557b0;
       --matrix-green:#00e676;
       --cyber-blue:#00b0ff;
       --warning:#ffc107;
@@ -55,7 +57,7 @@
 
     /* CERTIFICATE PAGE */
     .certificate-page{
-      background:#fff;border:10px solid #B8860B;border-radius:10px;color:#333;
+      background:#fff;border:10px solid #B8860B;border-radius:10px;color:#202124;
       font-family:"Times New Roman",serif;margin:0 auto 24px;box-sizing:border-box;
       width:1123px;height:794px;padding:40px;
       display:flex;flex-direction:column;page-break-inside:avoid;
@@ -69,11 +71,11 @@
       border-radius:6px;
       pointer-events:none;
     }
-    .certificate-page h1{font-size:3.5rem;font-weight:700;margin-bottom:.5rem;letter-spacing:3px;color:#333}
-    .certificate-page .sub{font-size:1.2rem;color:#666;letter-spacing:4px}
-    .presented{font-style:italic;margin:30px 0;font-size:1.1rem;text-align:center}
-    .participant-name{font-size:3rem;font-weight:700;margin:40px 0;font-style:italic;text-align:center}
-    .body-text{font-size:1.1rem;line-height:1.8;margin:30px 0;color:#555;text-align:center}
+    .certificate-page h1{font-size:3.5rem;font-weight:700;margin-bottom:.5rem;letter-spacing:3px;color:var(--primary)}
+    .certificate-page .sub{font-size:1.2rem;color:var(--cyber-blue);letter-spacing:4px}
+    .presented{font-style:italic;margin:30px 0;font-size:1.1rem;text-align:center;color:var(--text-secondary)}
+    .participant-name{font-size:3rem;font-weight:700;margin:40px 0;font-style:italic;text-align:center;color:var(--primary-dark)}
+    .body-text{font-size:1.1rem;line-height:1.8;margin:30px 0;color:var(--text-secondary);text-align:center}
     .hack-logo{position:absolute;top:30px;right:30px;max-width:150px;max-height:80px;object-fit:contain}
 
     .content-wrap{flex:1 1 auto;min-height:0}
@@ -83,8 +85,8 @@
     .sig-block{text-align:center;max-width:360px;margin:0 auto}
     .sig-img{max-height:75px;object-fit:contain;margin:0 auto 6px;display:block}
     .signature-script{font-family:'Great Vibes', cursive;font-size:2.1rem;line-height:1;transform:rotate(-2deg);color:#222;letter-spacing:.5px;margin-bottom:10px}
-    .sig-line{border-top:2px solid #333;width:260px;margin:0 auto 8px}
-    .cert-id{font-family:"Courier New", monospace;font-size:.9rem;color:#555;margin-top:6px}
+    .sig-line{border-top:2px solid var(--primary-dark);width:260px;margin:0 auto 8px}
+    .cert-id{font-family:"Courier New", monospace;font-size:.9rem;color:var(--text-secondary);margin-top:6px}
 
     /* ONE-ROW LOGOS (auto-shrink) */
     .logo-grid{
@@ -108,28 +110,31 @@
     .sig-gap{height:24px;}
 
     /* PRINT */
-    @page { size: A4 landscape; margin: 0; }
+    @page { size: landscape; margin: 0; }
     @media print{
       *{-webkit-print-color-adjust:exact;print-color-adjust:exact}
       body{background:#fff!important}
       .navbar,.timezone-section,.footer,.surface > *:not(#certificate-generator){display:none!important}
       .container{max-width:none;padding:0!important;margin:0!important}
       .print-page{
-        width:297mm!important;
-        height:210mm!important;
-        page-break-after:always;
-        break-after:page;
-        margin:0!important;
-      }
-      .print-page:last-child{
+        width:100%!important;
+        height:100%!important;
         page-break-after:auto;
         break-after:auto;
+        margin:0!important;
       }
       .certificate-page{
-        width:297mm!important;height:210mm!important;
+        width:100%!important;height:100%!important;
         border:4mm solid #B8860B!important;border-radius:0!important;padding:14mm!important;margin:0!important;
         display:flex;flex-direction:column;
         box-shadow:none!important;
+        overflow:hidden!important;
+        page-break-after:always;
+        break-after:page;
+      }
+      .certificate-page:last-child{
+        page-break-after:auto;
+        break-after:auto;
       }
       .certificate-page::before{
         top:4mm;right:4mm;bottom:4mm;left:4mm;
